--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "minimum-stability": "dev",
     "require": {
          "illuminate/database": ">=8.0",
-        "illuminate/support": "8.*",
+        "illuminate/support": ">=8.0",
         "intervention/image": "^2.4"
     },
     "autoload": {
